update from clisp

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-07-02  Sam Steingold  <sds@gnu.org>
 
+	* m4/ln.m4: update from clisp
+
+2008-07-02  Sam Steingold  <sds@gnu.org>
+
 	* Makefile.devel, aclocal.m4: move autoconf/aclocal.m4 to aclocal.m4
 	* aclocal/autoconf.m4: remove
 
