--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,13 @@
 2008-07-02  Sam Steingold  <sds@gnu.org>
 
 	* m4/ln.m4: update from clisp
-	* m4/cp.m4: removed
+	* m4/cp.m4: remove
 	* m4/getpagesize.m4: update from clisp
 	* m4/general.m4: update from clisp
 	* m4/mmap.m4: update from clisp
 	* m4/mprotect.m4: update from clisp
 	* m4/proto.m4: update from clisp
+	* m4/openflags.m4: remove
 
 2008-07-02  Sam Steingold  <sds@gnu.org>
 
