--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
 	* m4/mprotect.m4: update from clisp
 	* m4/proto.m4: update from clisp
 	* m4/openflags.m4: remove
+	* m4/cc-void.m4: remove
 
 2008-07-02  Sam Steingold  <sds@gnu.org>
 
