--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-07-02  Sam Steingold  <sds@gnu.org>
 
+	* Makefile.devel (gnulib-imported, update-gnulib): new targets
+	* glm4: new directory
+	* longlong.m4, nocrash.m4: move from m4 to glm4
+
+2008-07-02  Sam Steingold  <sds@gnu.org>
+
 	* m4/ln.m4: update from clisp
 	* m4/cp.m4: remove
 	* m4/getpagesize.m4: update from clisp
